--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Home</title>
-    <link rel="stylesheet" href="/CSS/nav.css">
-    <script src="/JS/nav.js"></script>
+    <link rel="stylesheet" href="nav.css">
+    <script src="nav.js"></script>
 </head>
 
 <body>
