--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="nav.css">
-    <script src="nav.js"></script>
+    <!-- <script src="nav.js"></script> -->
 </head>
 
 <body>
