✨ (navbar) added logo and started changing link names

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Navbar</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="./CSS/index.css" />
   </head>
   <body>
     <header id="navbar">
       <nav class="navbar-container container">
         <a href="/" class="home-link">
-          <div class="navbar-logo"></div>
-          Website Name
+          <div class="navbar-logo"><img src="./Images/Key Element-logos 2.jpeg" alt="Logo" width="30"></div>
+          Key Element
         </a>
         <button
           type="button"
@@ -28,7 +28,7 @@
           <ul class="navbar-links">
             <li class="navbar-item"><a class="navbar-link" href="/about">About</a></li>
             <li class="navbar-item"><a class="navbar-link" href="/blog">Blog</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="/careers">Careers</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="/careers">Products</a></li>
             <li class="navbar-item"><a class="navbar-link" href="/contact">Contact</a></li>
           </ul>
         </div>
