✨ (pages) addedmany new pages

--- a/HTML/order.html
+++ b/HTML/order.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="./CSS/index.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS/order.css" />
   </head>
   <body>
     <header id="navbar">
       <nav class="navbar-container container">
         <a href="/" class="home-link">
-          <div class="navbar-logo"><img src="./Images/Key Element-logos 2.jpeg" alt="Logo" width="30"></div>
+          <div class="navbar-logo"><img src="../Images/Key Element-logos 2.jpeg" alt="Logo" width="30"></div>
           Key Element
         </a>
         <button
@@ -26,9 +26,9 @@
         </button>
         <div id="navbar-menu" aria-labelledby="navbar-toggle">
           <ul class="navbar-links">
-            <li class="navbar-item"><a class="navbar-link" href="./HTML/about.html">About</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="./HTML/keyboards.html">Keyboards</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="./HTML/order.html">Order</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="../HTML/about.html">About</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="../HTML/keyboards.html">Keyboards</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="../HTML/order.html">Order</a></li>
           </ul>
         </div>
       </nav>
@@ -36,6 +36,6 @@
 
     
 
-    <script src="./JS/index.js"></script>
+    <script src="../JS/index.js"></script>
   </body>
 </html>
