✨ (everything) moer baie nuwe features lol

--- a/HTML/keyboards.html
+++ b/HTML/keyboards.html
@@ -25,18 +25,24 @@
                 <ul class="navbar-links">
                     <li class="navbar-item"><a class="navbar-link" href="../HTML/about.html">About</a></li>
                     <li class="navbar-item"><a class="navbar-link" href="../HTML/keyboards.html">Keyboards</a></li>
-                    <li class="navbar-item"><a class="navbar-link" href="../HTML/order.html">Order</a></li>
-                  </ul>
+                    <li class="navbar-item"><a class="navbar-link" href="../HTML/order.html">Place an Order</a></li>
+                </ul>
             </div>
         </nav>
     </header>
 
-    <div class="card">
-        <img src="../Images/Keychron K2.jpeg" alt="Keychron K2" style="width:100%">
-        <h1>Keychron K2</h1>
-        <p class="price">R1550</p>
-        <p>Some text about the jeans..</p>
-        <p><button>Add to Cart</button></p>
+    <div class="about-section">
+        <h1>Keyboards</h1>
+        <p>Here we have a wide selection of keyboard, both professional and gaming, that have a wide variety of great
+            features. There is sure to be something for
+            everyone no matter your preference of budget.
+        </p>
+        <h1>How to order:</h1>
+        <p>Since we are a small company and our CEO developed this website himself, our ordering process is a bit janky
+            if we do say so ourselves. When you click the order button below on any of our items you
+            will be redirected to our "Place an order" page where you will find a form to be filled out. Just fill out your details
+            on this form and state the product you are interested in purchasing and
+            we will contact you to confirm stock availability and place your order.</p>
     </div>
 
     <div class="card">
@@ -44,7 +50,7 @@
         <h1>Keychron K2</h1>
         <p class="price">R1550</p>
         <p>Some text about the jeans..</p>
-        <p><button>Add to Cart</button></p>
+        <p><button>Order</button></p>
     </div>
 
     <div class="card">
@@ -52,7 +58,7 @@
         <h1>Keychron K2</h1>
         <p class="price">R1550</p>
         <p>Some text about the jeans..</p>
-        <p><button>Add to Cart</button></p>
+        <p><button>Order</button></p>
     </div>
 
     <div class="card">
@@ -60,7 +66,15 @@
         <h1>Keychron K2</h1>
         <p class="price">R1550</p>
         <p>Some text about the jeans..</p>
-        <p><button>Add to Cart</button></p>
+        <p><button>Order</button></p>
+    </div>
+
+    <div class="card">
+        <img src="../Images/Keychron K2.jpeg" alt="Keychron K2" style="width:100%">
+        <h1>Keychron K2</h1>
+        <p class="price">R1550</p>
+        <p>Some text about the jeans..</p>
+        <p><button>Order</button></p>
     </div>
 
     <script src="../JS/index.js"></script>
