--- a/HTML/order.html
+++ b/HTML/order.html
@@ -1,41 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="../CSS/order.css" />
-  </head>
-  <body>
-    <header id="navbar">
-      <nav class="navbar-container container">
-        <a href="/" class="home-link">
-          <div class="navbar-logo"><img src="../Images/Key Element-logos 2.jpeg" alt="Logo" width="30"></div>
-          Key Element
-        </a>
-        <button
-          type="button"
-          id="navbar-toggle"
-          aria-controls="navbar-menu"
-          aria-label="Toggle menu"
-          aria-expanded="false"
-        >
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <div id="navbar-menu" aria-labelledby="navbar-toggle">
-          <ul class="navbar-links">
-            <li class="navbar-item"><a class="navbar-link" href="../HTML/about.html">About</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="../HTML/keyboards.html">Keyboards</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="../HTML/order.html">Order</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home</title>
+  <link rel="stylesheet" type="text/css" href="../CSS/order.css" />
+</head>
+
+<body>
+  <header id="navbar">
+    <nav class="navbar-container container">
+      <a href="../index.html" class="home-link">
+        <div class="navbar-logo"><img src="../Images/Key Element-logos 2.jpeg" alt="Logo" width="30"></div>
+        Key Element
+      </a>
+      <button type="button" id="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu"
+        aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <div id="navbar-menu" aria-labelledby="navbar-toggle">
+        <ul class="navbar-links">
+          <li class="navbar-item"><a class="navbar-link" href="../HTML/about.html">About</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="../HTML/keyboards.html">Keyboards</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="../HTML/order.html">Place an Order</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <div class="about-section">
+    <h1>Place an Order</h1>
+    <p>Since we are a small company and our CEO developed this website himself, our ordering process is a bit janky if
+      we do say so ourselves.
+      Below you will find a form where you can fill out your details and state the product you are interested in and
+      we will contact you to confirm stock availability and place your order.</p>
     
+  </div>
 
-    <script src="../JS/index.js"></script>
-  </body>
+  <div>
+    <p>fjkenjew</p>
+  </div>
+
+
+  <div class="banking-details-section">
+    <h1>Banking Details</h1>
+    <p>Bank: Nedbank</p>
+    <p>Account number: 1234250748</p>
+    <p>Account type: Curent</p>
+    <p>Reference: Your name and surname</p>
+    <h1>Payment Process:</h1>
+    <p>After your order is confirmed with us, payment can be made via EFT. Depending on which bank you use, payment can
+      take up to 2
+      business days to show in our account. Then as soon as we have your product in hand from ur supplier you will be
+      notified and delivery arranged.</p>
+    <h1>Payments accepted:</h1>
+    <p>We only accept EFT payments as having a credit card facility at our bank has big fees attached to it.</p>
+    <h1>Delivery options:</h1>
+    <p>Collection: If you are in the Pretoria area collection can be arranged at our CEO's home.</p>
+    <p>Delivery in the East Rand: If you are in the East rand area in Gauteng our team will arrange delivery personally
+      to you.</p>
+    <p>Delivery Elsewhere: Delivery via Postnet to Postnet as well as delivery via Courier is available at an extra fee
+      of between R100 and R200.</p>
+  </div>
+
+
+  <script src="../JS/index.js"></script>
+</body>
+
 </html>
