--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,41 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="../CSS/about.css" />
-  </head>
-  <body>
-    <header id="navbar">
-      <nav class="navbar-container container">
-        <a href="/" class="home-link">
-          <div class="navbar-logo"><img src="../Images/Key Element-logos 2.jpeg" alt="Logo" width="30"></div>
-          Key Element
-        </a>
-        <button
-          type="button"
-          id="navbar-toggle"
-          aria-controls="navbar-menu"
-          aria-label="Toggle menu"
-          aria-expanded="false"
-        >
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <div id="navbar-menu" aria-labelledby="navbar-toggle">
-          <ul class="navbar-links">
-            <li class="navbar-item"><a class="navbar-link" href="../HTML/about.html">About</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="../HTML/keyboards.html">Keyboards</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="../HTML/order.html">Order</a></li>
-          </ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home</title>
+  <link rel="stylesheet" type="text/css" href="../CSS/about.css" />
+</head>
+
+<body>
+  <header id="navbar">
+    <nav class="navbar-container container">
+      <a href="../index.html" class="home-link">
+        <div class="navbar-logo"><img src="../Images/Key Element-logos 2.jpeg" alt="Logo" width="30"></div>
+        Key Element
+      </a>
+      <button type="button" id="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu"
+        aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <div id="navbar-menu" aria-labelledby="navbar-toggle">
+        <ul class="navbar-links">
+          <li class="navbar-item"><a class="navbar-link" href="../HTML/about.html">About</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="../HTML/keyboards.html">Keyboards</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="../HTML/order.html">Place an Order</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <div class="about-section">
+    <h1>About Us Page</h1>
+    <p>Key Element Electronics is a company that was initially started to trade in mechanical keyboards and this is sill
+      our speciality. We however
+      later expanded to be a general electronics reseller. As can be seen by our selection of products we mainly focus
+      on computer related electronics
+      however if you have a specific request for an item please, feel free to reach out and we will try our best to
+      source it from our suppliers, whatever it is!</p>
+  </div>
+
+  <h2 style="text-align:center">Our Team</h2>
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <img src="../Images/Stefan van Schoor.jpeg" alt="Stefan" style="width:100%">
+        <div class="container">
+          <h2>Stefan van Schoor</h2>
+          <p class="title">CEO & Founder</p>
+          <p>Stefan is a Computer Science student who is passionate about all things electronics. If it has a cable and
+            can switch on, consider him interested.
+            He started the company as a student to make an extra income and expand his own portfolio.
+          </p>
+          <a href="mailto:keyelementmods@gmail.com">keyelementmods@gmail.com</a>
+          <p><button class="button">Contact</button></p>
         </div>
-      </nav>
-    </header>
+      </div>
+    </div>
+  </div>
 
-    
 
-    <script src="../JS/index.js"></script>
-  </body>
+
+  <script src="../JS/index.js"></script>
+</body>
+
 </html>
