--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header id="navbar">
       <nav class="navbar-container container">
-        <a href="/" class="home-link">
+        <a href="index.html" class="home-link">
           <div class="navbar-logo"><img src="./Images/Key Element-logos 2.jpeg" alt="Logo" width="30"></div>
           Key Element
         </a>
@@ -28,7 +28,7 @@
           <ul class="navbar-links">
             <li class="navbar-item"><a class="navbar-link" href="./HTML/about.html">About</a></li>
             <li class="navbar-item"><a class="navbar-link" href="./HTML/keyboards.html">Keyboards</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="./HTML/order.html">Order</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="./HTML/order.html">Place an Order</a></li>
           </ul>
         </div>
       </nav>
