🐛 (product cards) fixed the product card sizes with the help of Skorpion19091

--- a/HTML/keyboards.html
+++ b/HTML/keyboards.html
@@ -41,203 +41,207 @@
         <h1>How to order:</h1>
         <p>Since we are a small company and our CEO developed this website himself, our ordering process is a bit janky
             if we do say so ourselves. When you click the order button below on any of our items you
-            will be redirected to our "Place an order" page where you will find a form to be filled out. Just fill out your details
+            will be redirected to our "Place an order" page where you will find a form to be filled out. Just fill out
+            your details
             on this form and state the product you are interested in purchasing and
             we will contact you to confirm stock availability and place your order.</p>
     </div>
 
-    <div class="card">
-        <img src="../Images/Keychron K2.jpeg" alt="Keychron K2" style="width: 100%">
-        <h1>Keychron K2</h1>
-        <p class="price">R1550</p>
-        <p><b>Switch Type: </b>Brown</p>
-        <p><b>Form factor: </b>65%</p>
-        <p><button>Order</button></p>
-    </div>
+    <section class="products">
 
-    <div class="card">
-        <img src="../Images/KK C1 brown R1350.jpg" alt="Keychron C1" style="width: 100%">
-        <h1>Keychron C1</h1>
-        <p class="price">R1350</p>
-        <p><b>Switch Type: </b>Brown</p>
-        <p><b>Form factor: </b>TKL</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/Keychron K2.jpeg" alt="Keychron K2" style="width: 100%">
+            <h1>Keychron K2</h1>
+            <p class="price">R1550</p>
+            <p><b>Switch Type: </b>Brown</p>
+            <p><b>Form factor: </b>65%</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/KK K8 blue aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
-        <h1>Keychron K8</h1>
-        <p class="price">R1400</p>
-        <p><b>Switch Type: </b>Blue</p>
-        <p><b>Form factor: </b>TKL</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/KK C1 brown R1350.jpg" alt="Keychron C1" style="width: 100%">
+            <h1>Keychron C1</h1>
+            <p class="price">R1350</p>
+            <p><b>Switch Type: </b>Brown</p>
+            <p><b>Form factor: </b>TKL</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/KK K8 brown aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
-        <h1>Keychron K8</h1>
-        <p class="price">R1400</p>
-        <p><b>Switch Type: </b>Brown</p>
-        <p><b>Form factor: </b>TKL</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/KK K8 blue aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
+            <h1>Keychron K8</h1>
+            <p class="price">R1400</p>
+            <p><b>Switch Type: </b>Blue</p>
+            <p><b>Form factor: </b>TKL</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/KK K8 red aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
-        <h1>Keychron K8</h1>
-        <p class="price">R1400</p>
-        <p><b>Switch Type: </b>Red</p>
-        <p><b>Form factor: </b>TKL</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/KK K8 brown aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
+            <h1>Keychron K8</h1>
+            <p class="price">R1400</p>
+            <p><b>Switch Type: </b>Brown</p>
+            <p><b>Form factor: </b>TKL</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/Logitech G213 R1000.png" alt="Logitech G213" style="width: 100%">
-        <h1>Logitech G213</h1>
-        <p class="price">R1000</p>
-        <p><b>Switch Type: </b>Mech-Dome Tactile</p>
-        <p><b>Form factor: </b>Full size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/KK K8 red aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
+            <h1>Keychron K8</h1>
+            <p class="price">R1400</p>
+            <p><b>Switch Type: </b>Red</p>
+            <p><b>Form factor: </b>TKL</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/Logitech G413 silver R1450.png" alt="Logitech G413" style="width: 100%">
-        <h1>Logitech G413</h1>
-        <p class="price">R1450</p>
-        <p><b>Switch Type: </b>Romer G Tactile</p>
-        <p><b>Form factor: </b>Full size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/Logitech G213 R1000.png" alt="Logitech G213" style="width: 100%">
+            <h1>Logitech G213</h1>
+            <p class="price">R1000</p>
+            <p><b>Switch Type: </b>Mech-Dome Tactile</p>
+            <p><b>Form factor: </b>Full size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/MSI Vigor GK30 R600.jpg" alt="MSI Vigor GK30" style="width: 100%">
-        <h1>MSI Vigor GK30</h1>
-        <p class="price">R600</p>
-        <p><b>Switch Type: </b>'Mechanical like' membrane</p>
-        <p><b>Form factor: </b>Full size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/Logitech G413 silver R1450.png" alt="Logitech G413" style="width: 100%">
+            <h1>Logitech G413</h1>
+            <p class="price">R1450</p>
+            <p><b>Switch Type: </b>Romer G Tactile</p>
+            <p><b>Form factor: </b>Full size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/MSI Vigor GK30 Black combo R750.jpg" alt="MSI Vigor GK30" style="width: 100%">
-        <h1>MSI Vigor GK30 combo- Black</h1>
-        <p class="price">R750</p>
-        <p><b>Switch Type: </b>'Mechanical like' membrane</p>
-        <p><b>Form factor: </b>Full size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/MSI Vigor GK30 R600.jpg" alt="MSI Vigor GK30" style="width: 100%">
+            <h1>MSI Vigor GK30</h1>
+            <p class="price">R600</p>
+            <p><b>Switch Type: </b>'Mechanical like' membrane</p>
+            <p><b>Form factor: </b>Full size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/MSI Vigor GK30 white combo R750.jpg" alt="MSI Vigor GK30" style="width: 100%">
-        <h1>MSI Vigor GK30 combo- White</h1>
-        <p class="price">R750</p>
-        <p><b>Switch Type: </b>'Mechanical like' membrane</p>
-        <p><b>Form factor: </b>Full size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/MSI Vigor GK30 Black combo R750.jpg" alt="MSI Vigor GK30" style="width: 100%">
+            <h1>MSI Vigor GK30 combo- Black</h1>
+            <p class="price">R750</p>
+            <p><b>Switch Type: </b>'Mechanical like' membrane</p>
+            <p><b>Form factor: </b>Full size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/MSI Vigor GK50 Elite R1000.jpg" alt="MSI Vigor GK50" style="width: 100%">
-        <h1>MSI Vigor GK50</h1>
-        <p class="price">R1000</p>
-        <p><b>Switch Type: </b>Kailh box white</p>
-        <p><b>Form factor: </b>Full size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/MSI Vigor GK30 white combo R750.jpg" alt="MSI Vigor GK30" style="width: 100%">
+            <h1>MSI Vigor GK30 combo- White</h1>
+            <p class="price">R750</p>
+            <p><b>Switch Type: </b>'Mechanical like' membrane</p>
+            <p><b>Form factor: </b>Full size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/Razer Blackwidow V3 mini hyperspeed wireless R2900.jpg" alt="razer blackwidow" style="width: 100%">
-        <h1>Razer Blackwidow V3 mini hyperspeed wireless</h1>
-        <p class="price">R2900</p>
-        <p><b>Switch Type: </b>Yellow linear</p>
-        <p><b>Form factor: </b>65%</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/MSI Vigor GK50 Elite R1000.jpg" alt="MSI Vigor GK50" style="width: 100%">
+            <h1>MSI Vigor GK50</h1>
+            <p class="price">R1000</p>
+            <p><b>Switch Type: </b>Kailh box white</p>
+            <p><b>Form factor: </b>Full size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/Razer Ornata V2 chroma mecha-membrane R2300.jpg" alt="razer ornata" style="width: 100%">
-        <h1>Razer Ornata v2 Chroma</h1>
-        <p class="price">R2300</p>
-        <p><b>Switch Type: </b>mecha-membrane</p>
-        <p><b>Form factor: </b>Full Size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/Razer Blackwidow V3 mini hyperspeed wireless R2900.jpg" alt="razer blackwidow"
+                style="width: 100%">
+            <h1>Razer Blackwidow V3 mini hyperspeed wireless</h1>
+            <p class="price">R2900</p>
+            <p><b>Switch Type: </b>Yellow linear</p>
+            <p><b>Form factor: </b>65%</p>
+            <p><button>Order</button></p>
+        </div>
+
+        <div class="card">
+            <img src="../Images/Razer Ornata V2 chroma mecha-membrane R2300.jpg" alt="razer ornata" style="width: 100%">
+            <h1>Razer Ornata v2 Chroma</h1>
+            <p class="price">R2300</p>
+            <p><b>Switch Type: </b>mecha-membrane</p>
+            <p><b>Form factor: </b>Full Size</p>
+            <p><button>Order</button></p>
+        </div>
 
 
-    <div class="card">
-        <img src="../Images/RD APAS Pro R900.jpg" alt="Redragon APAS Pro" style="width: 100%">
-        <h1>Redragon APAS Pro</h1>
-        <p class="price">R900</p>
-        <p><b>Switch Type: </b>Low profile linear</p>
-        <p><b>Form factor: </b>Full Size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/RD APAS Pro R900.jpg" alt="Redragon APAS Pro" style="width: 100%">
+            <h1>Redragon APAS Pro</h1>
+            <p class="price">R900</p>
+            <p><b>Switch Type: </b>Low profile linear</p>
+            <p><b>Form factor: </b>Full Size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/RD Apas Pro wireless R1200.jpg" alt="Redragon APAS Pro" style="width: 100%">
-        <h1>Redragon APAS Pro wireless</h1>
-        <p class="price">R1200</p>
-        <p><b>Switch Type: </b>Low profile linear</p>
-        <p><b>Form factor: </b>Full Size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/RD Apas Pro wireless R1200.jpg" alt="Redragon APAS Pro" style="width: 100%">
+            <h1>Redragon APAS Pro wireless</h1>
+            <p class="price">R1200</p>
+            <p><b>Switch Type: </b>Low profile linear</p>
+            <p><b>Form factor: </b>Full Size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/RD APS R769.jpg" alt="Redragon APS" style="width: 100%">
-        <h1>Redragon APS</h1>
-        <p class="price">R760</p>
-        <p><b>Switch Type: </b>Low profile blue clicky</p>
-        <p><b>Form factor: </b>TKL</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/RD APS R769.jpg" alt="Redragon APS" style="width: 100%">
+            <h1>Redragon APS</h1>
+            <p class="price">R760</p>
+            <p><b>Switch Type: </b>Low profile blue clicky</p>
+            <p><b>Form factor: </b>TKL</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/RD Aryaman R1000.jpg" alt="Redragon Aryaman" style="width: 100%">
-        <h1>Redragon Aryaman</h1>
-        <p class="price">R1000</p>
-        <p><b>Switch Type: </b>Blue clicky</p>
-        <p><b>Form factor: </b>Full Size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/RD Aryaman R1000.jpg" alt="Redragon Aryaman" style="width: 100%">
+            <h1>Redragon Aryaman</h1>
+            <p class="price">R1000</p>
+            <p><b>Switch Type: </b>Blue clicky</p>
+            <p><b>Form factor: </b>Full Size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/RD Dark Avenger R750.jpg" alt="Redragon Dark Avneger" style="width: 100%">
-        <h1>Redragon Dark Avenger</h1>
-        <p class="price">R750</p>
-        <p><b>Switch Type: </b>Blue clicky</p>
-        <p><b>Form factor: </b>TKL</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/RD Dark Avenger R750.jpg" alt="Redragon Dark Avneger" style="width: 100%">
+            <h1>Redragon Dark Avenger</h1>
+            <p class="price">R750</p>
+            <p><b>Switch Type: </b>Blue clicky</p>
+            <p><b>Form factor: </b>TKL</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/RD Horus R1200.jpg" alt="Redragon Horus" style="width: 100%">
-        <h1>Redragon Horus wireless</h1>
-        <p class="price">R1200</p>
-        <p><b>Switch Type: </b>Blue clicky</p>
-        <p><b>Form factor: </b>TKL</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/RD Horus R1200.jpg" alt="Redragon Horus" style="width: 100%">
+            <h1>Redragon Horus wireless</h1>
+            <p class="price">R1200</p>
+            <p><b>Switch Type: </b>Blue clicky</p>
+            <p><b>Form factor: </b>TKL</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/RD Kumara R700.jpg" alt="Redragon Kumara" style="width: 100%">
-        <h1>Redragon Kumara</h1>
-        <p class="price">R700</p>
-        <p><b>Switch Type: </b>Blue clicky</p>
-        <p><b>Form factor: </b>TKL</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/RD Kumara R700.jpg" alt="Redragon Kumara" style="width: 100%">
+            <h1>Redragon Kumara</h1>
+            <p class="price">R700</p>
+            <p><b>Switch Type: </b>Blue clicky</p>
+            <p><b>Form factor: </b>TKL</p>
+            <p><button>Order</button></p>
+        </div>
 
-    <div class="card">
-        <img src="../Images/RD Ratri silent R1100.jpg" alt="Redragon Ratri" style="width: 100%">
-        <h1>Redragon Ratri Silent</h1>
-        <p class="price">R1100</p>
-        <p><b>Switch Type: </b>Black Linear</p>
-        <p><b>Form factor: </b>Full Size</p>
-        <p><button>Order</button></p>
-    </div>
+        <div class="card">
+            <img src="../Images/RD Ratri silent R1100.jpg" alt="Redragon Ratri" style="width: 100%">
+            <h1>Redragon Ratri Silent</h1>
+            <p class="price">R1100</p>
+            <p><b>Switch Type: </b>Black Linear</p>
+            <p><b>Form factor: </b>Full Size</p>
+            <p><button>Order</button></p>
+        </div>
 
-    
 
+    </section>
 
     <script src="../JS/index.js"></script>
 </body>
