🐛 fixed spelling error

--- a/HTML/order.html
+++ b/HTML/order.html
@@ -142,7 +142,7 @@
     <p>Account Holder: KEY ELEMENT MODS (PTY) Ltd.</p>
     <p>Bank: Nedbank</p>
     <p>Account number: 1234250748</p>
-    <p>Account type: Curent</p>
+    <p>Account type: Current</p>
     <p>Reference: Your name and surname</p>
     <h1>Payments accepted:</h1>
     <p>We only accept EFT payments as having a credit card facility at our bank has big fees attached to it.</p>
