✨ (home) added home page

--- a/HTML/order.html
+++ b/HTML/order.html
@@ -147,7 +147,7 @@
     <h1>Payments accepted:</h1>
     <p>We only accept EFT payments as having a credit card facility at our bank has big fees attached to it.</p>
     <h1>Delivery options:</h1>
-    <p>Collection: If you are in the Pretoria area collection can be arranged at our Faerie Glen office.</p>
+    <p>Collection: If you are in the Pretoria area, collection can be arranged at our Faerie Glen office.</p>
     <p>Delivery in the East Rand: If you are in the East rand area in Gauteng our team will arrange delivery personally
       to you.</p>
     <p>Delivery Elsewhere: Delivery via Postnet to Postnet as well as delivery via Courier is available at an extra fee
