--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
       </nav>
     </header>
 
+    <!-- Vir Oupa -->
+  <div class="about-section">
+    <!-- <h1>Welcome to Key Element Electronics</h1> -->
+    <img src="./Images/Key Element-logos  BANNER.jpeg" width="60%">
+  </div>
+  <div class="we-offer-section">
+    <h1>Welcome!</h1>
+    <h1>Currently we offer a wide variety of mechanical keyboards but we aim to expand to a wide range of electronics very soon.</h1>
+  </div>
+  <div class="feel-free-section">
+    <h1>Feel free to browse our range of keyboards <a href="https://keyelementelectronics.github.io/HTML/keyboards.html">here</a></h1>
+  </div>
+  <div class="order-section">
+    <h1>If you already know what you want you can place an order <a href="https://keyelementelectronics.github.io/HTML/order.html">here</a> </h1>
+  </div>
+
     
 
     <script src="./JS/index.js"></script>
