--- a/HTML/keyboards.html
+++ b/HTML/keyboards.html
@@ -51,7 +51,7 @@
 
         <div class="card">
             <img src="../Images/Keychron K2.jpeg" alt="Keychron K2" style="width: 100%">
-            <h1>Keychron K2</h1>
+            <h1>Keychron K2 Aliminium body</h1>
             <p class="price">R1550</p>
             <p><b>Switch Type: </b>Brown</p>
             <p><b>Form factor: </b>65%</p>
@@ -69,7 +69,7 @@
 
         <div class="card">
             <img src="../Images/KK K8 blue aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
-            <h1>Keychron K8</h1>
+            <h1>Keychron K8 Aliminium body</h1>
             <p class="price">R1400</p>
             <p><b>Switch Type: </b>Blue</p>
             <p><b>Form factor: </b>TKL</p>
@@ -78,7 +78,7 @@
 
         <div class="card">
             <img src="../Images/KK K8 brown aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
-            <h1>Keychron K8</h1>
+            <h1>Keychron K8 Aliminium body</h1>
             <p class="price">R1400</p>
             <p><b>Switch Type: </b>Brown</p>
             <p><b>Form factor: </b>TKL</p>
@@ -87,7 +87,7 @@
 
         <div class="card">
             <img src="../Images/KK K8 red aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
-            <h1>Keychron K8</h1>
+            <h1>Keychron K8 Aliminium body</h1>
             <p class="price">R1400</p>
             <p><b>Switch Type: </b>Red</p>
             <p><b>Form factor: </b>TKL</p>
