--- a/HTML/keyboards.html
+++ b/HTML/keyboards.html
@@ -58,14 +58,14 @@
             <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
         </div>
 
-        <div class="card">
+        <!-- <div class="card">
             <img src="../Images/KK C1 brown R1350.jpg" alt="Keychron C1" style="width: 100%">
             <h1>Keychron C1</h1>
             <p class="price">R1350</p>
             <p><b>Switch Type: </b>Brown tactile</p>
             <p><b>Form factor: </b>TKL</p>
             <p><a href="https://keyelementelectronics.github.io/HTML/order.html"><button>Order</button></a></p>
-        </div>
+        </div> -->
 
         <div class="card">
             <img src="../Images/KK K8 blue aluminum R1400.jpg" alt="Keychron K8" style="width: 100%">
